cattlevax-sf-sandbox/force-app/main/default/objects/APHA_VaccinationInvitationSent__c/APHA_VaccinationInvitationSent__c.object-meta.xml
<CustomObject>
    <label>Vaccination Invitation Sent</label>
    <nameField>
        <displayFormat>VIS-{00000000}</displayFormat>
        <label>Vaccination Invitation Sent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vaccination Invitations Sent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>