cattlevax-sf-sandbox/force-app/main/default/objects/APHA_VaccinationInvitationSent__c/fields/APHA_Case__c.field-meta.xml
<CustomField>
    <fullName>APHA_Case__c</fullName>
    <description>Parent Case</description>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Case with Bovine TB Vaccination Invitation as the Case Type</errorMessage>
        <filterItems>
            <field>Case.Type</field>
            <operation>equals</operation>
            <value>Bovine TB Vaccination Invitation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vaccination Invitations Sent</relationshipLabel>
    <relationshipName>APHA_VaccinationInvitationsSent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>