cattlevax-sf-sandbox/force-app/main/default/objects/APHA_VaccinationInvitationSent__c/fields/APHA_ContactMethod__c.field-meta.xml
<CustomField>
    <fullName>APHA_ContactMethod__c</fullName>
    <label>Contact Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>