cattlevax-sf-sandbox/force-app/main/default/objects/APHA_VaccinationInvitationSent__c/fields/APHA_DateSent__c.field-meta.xml
<CustomField>
    <fullName>APHA_DateSent__c</fullName>
    <description>The date the invitation is sent</description>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>