cattlevax-sf-sandbox/force-app/main/default/objects/APHA_VaccinationInvitationSent__c/fields/APHA_ExpectedResponseDate__c.field-meta.xml
<CustomField>
    <fullName>APHA_ExpectedResponseDate__c</fullName>
    <description>The date that a response is expected to have been received by</description>
    <label>Expected Response Date</label>
    <type>Date</type>
</CustomField>