cattlevax-sf-sandbox/force-app/main/default/objects/APHA_VaccinationInvitationSent__c/fields/APHA_IssuedBy__c.field-meta.xml
<CustomField>
    <fullName>APHA_IssuedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who issued the invitation or reminder</description>
    <label>Issued By</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Issued by is required</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>APHA_VaccinationInvitationsSent</relationshipName>
    <type>Lookup</type>
</CustomField>