cattlevax-sf-sandbox/force-app/main/default/objects/APHA_VaccinationInvitationSent__c/validationRules/APHA_DatesRequiredOnSentInvitation.validationRule-meta.xml
<ValidationRule>
    <fullName>APHA_DatesRequiredOnSentInvitation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(APHA_Status__c) = &apos;Sent&apos;,
OR(ISBLANK(APHA_DateSent__c), ISBLANK(APHA_ExpectedResponseDate__c))
)</errorConditionFormula>
    <errorMessage>Date Sent and Expected Response Date are required if Status is Sent</errorMessage>
</ValidationRule>